<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#152238"
    tools:context=".ProfilePage1Activity">

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="262dp"
        android:layout_height="39dp"
        android:text="Let's build your profile!"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />

    <TextView
        android:id="@+id/personalInfo1"
        android:layout_width="279dp"
        android:layout_height="32dp"
        android:text="Personal Information"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203" />

    <EditText
        android:id="@+id/preferName"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Preferred name"
        android:inputType="text"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <EditText
        android:id="@+id/etgender"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Gender"
        android:inputType="text"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />

    <EditText
        android:id="@+id/etage"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Age"
        android:inputType="text"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <TextView
        android:id="@+id/modalityInfo"
        android:layout_width="279dp"
        android:layout_height="32dp"
        android:text="Modality Information"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />

    <Button
        android:id="@+id/modalityBtn"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corners_white"
        android:inputType="text"
        android:text="Search for Modalities"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <Button
        android:id="@+id/NextBtn1"
        android:layout_width="310dp"
        android:layout_height="67dp"
        android:background="@drawable/rounded_corners"
        android:inputType="text"
        android:text="Next"
        android:textColor="#F6FAF9"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />


</androidx.constraintlayout.widget.ConstraintLayout>