<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#152238"
    android:id="@+id/LoginPage"
    tools:context=".Login">


    <Button
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#152238"
        android:text="Forgot Password?"
        android:textColor="#F6FAF9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lpassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="access"
        android:textColor="#F6FAF9"
        android:textSize="55dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Lemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <EditText
        android:id="@+id/Lpassword"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <EditText
        android:id="@+id/Lemail"
        android:layout_width="308dp"
        android:layout_height="39dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/Lpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="310dp"
        android:layout_height="67dp"
        android:background="@drawable/rounded_corners"
        android:text="Log In"
        android:inputType="text"
        android:textColor="#F6FAF9"
        android:textStyle="bold"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />


    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#152238"
        android:text="Sign up here"
        android:textColor="#F6FAF9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="103dp"
        android:layout_marginRight="103dp"
        android:text="Don't have an account?"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/RegisterBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>